--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Selam Akın Abi</h1>
+<p>Eğer bunu okuyup Akın abi değilsen discorddan ara biraz EU4 oynayalım HKTC.</p>
 </body>
 </html>
